Update chat list to be scrollable and set slight padding to ensure focus ring remain visible

--- a/packages/custom-chat/src/assets/main.scss
+++ b/packages/custom-chat/src/assets/main.scss
@@ -64,9 +64,10 @@ main.chat-view {
   }
 
   ul.chat-tabs {
-    padding: 0;
+    padding: var(--spacing--B);
     margin: 0;
     flex: 1;
+    overflow-y: auto;
 
     li {
       list-style: none;
